--- a/langchainPDF.csproj
+++ b/langchainPDF.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <PackageReference Include="itext7" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.5" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="0.16.230615.1-preview" />
+    <PackageReference Include="pythonnet" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
