--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.16",
     "http-proxy-middleware": "^2.0.6",
@@ -15,6 +16,7 @@
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.9.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
