--- a/langchainPDF.csproj
+++ b/langchainPDF.csproj
@@ -14,14 +14,17 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="itext7" Version="8.0.0" />
+    <PackageReference Include="JavaScriptEngineSwitcher.Extensions.MsDependencyInjection" Version="3.21.0" />
+    <PackageReference Include="JavaScriptEngineSwitcher.V8" Version="3.21.5" />
+    <PackageReference Include="JavaScriptEngineSwitcher.V8.Native.win-x64" Version="3.21.5" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.5" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="0.17.230629.1-preview" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.AI.HuggingFace" Version="0.17.230629.1-preview" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.AI.OpenAI" Version="0.17.230704.3-preview" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.Memory.Postgres" Version="0.17.230629.1-preview" />
-    <PackageReference Include="Npgsql" Version="7.0.4" />
-    <PackageReference Include="Pgvector" Version="0.1.3" />
-    <PackageReference Include="pythonnet" Version="3.0.1" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="0.20.230821.4-preview" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.AI.OpenAI" Version="0.20.230821.4-preview" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.Memory.Redis" Version="0.20.230821.4-preview" />
+    <PackageReference Include="React.AspNet" Version="5.2.12" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="$(SpaRoot)**" />
